--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,13 @@
     "description": "Walk through the SiteTree, and hooks implementors of SiteTreeWalkListener interface letting them doing things over each page.",
     "type": "silverstripe-module",
     "keywords": ["silverstripe", "sitetree", "task"],
-    "license": "GPL-2",
+    "license": "GPL-2.0-only",
     "authors": [{
         "name": "Gabriele Brosulo - Zirak",
         "email": "gabriele.brosulo@zirak.it"
     }],
     "require": {
-        "silverstripe/framework": "3.1.*",
-        "silverstripe/cms": "3.1.*"
+        "silverstripe/framework": "~3.1",
+        "silverstripe/cms": "~3.1"
     }
 }
